# ncclient

./: .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CNAME  Changelog  Jenkinsfile.yaml  LICENSE-JUNIPER  MANIFEST.in  Makefile  NOTICE  README  README.md  README.rst  SECURITY.md  index.html  ncclient.kpf  params.json  pyproject.toml  requirements-build.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  test.py  tox.ini
.github/workflows/: check.yaml  publish.yaml  release-test.yaml  release.yaml
0.2a/: .buildinfo  api.html  genindex.html  index.html  modindex.html  operations.html  search.html  searchindex.js  transport.html
0.2a/docs/: capabilities.html  extending.html  manager.html  objects.inv  xml_.html
0.2a/sources/: capabilities.txt  operations.txt
0.3/: .buildinfo  api.html  capabilities.html  extending.html  genindex.html  index.html  manager.html  objects.inv  operations.html  py-modindex.html  search.html  searchindex.js  transport.html  xml_.html
0.3.1/: api.html  capabilities.html  extending.html  genindex.html  index.html  manager.html  objects.inv  operations.html  py-modindex.html  search.html  searchindex.js  transport.html  xml_.html
0.3.1/_sources/: extending.txt  manager.txt  transport.txt
0.3.2/: .buildinfo  api.html  capabilities.html  extending.html  genindex.html  index.html  manager.html  objects.inv  operations.html  py-modindex.html  search.html  searchindex.js  transport.html  xml_.html
0.3.2/.doctrees/: api.doctree  capabilities.doctree  environment.pickle  extending.doctree  index.doctree  manager.doctree  operations.doctree  transport.doctree  xml_.doctree
0.3.2/_sources/: operations.txt  xml_.txt
0.3/_sources/: manager.txt
0.3/sources/: capabilities.txt  operations.txt  xml_.txt
docs/: Makefile  requirements.txt
docs/source/: api.rst  conf.py  extending.rst  index.rst  intro.rst  manager.rst  operations.rst  transport.rst  userdoc.rst  xml_.rst
examples/: NOTE  asyncio_example.py  ericsson_nc_prefix_example.py  huawei.py  hw01.py  interactive.txt  misc.py  nc01-tail.py  nc01-yuma.py  nc01.py  nc02-tail.py  nc02-yuma.py  nc02.py  nc03-tail.py  nc03-yuma.py  nc03.py  nc04.py  nc05.py  nc06.py  nc07.py  nc08-tail.py  nc08-yuma.py  nc08.py  nc09-tail.py  nc09-yuma.py  nxosapi.py  sample-yang-push-notification.xml  test2.py
examples/alu/: get_config.py
examples/base/: nc01.py  nc02.py  nc04.py  nc08.py  nc09.py  nc10.py  nc11.py
examples/juniper/: command-jnpr.py  compare-config-jnpr.py  delete-config-jnpr.py  description.py  edit-config-bgp-peer.py  edit-config-jnpr-json.py  edit-config-jnpr-set.py  edit-config-jnpr-text.py  edit-config-jnpr.py  (+20 more)
ncclient/: ElementTree.py  __init__.py  _types.py  _version.py  async_manager.py  asyncio_manager.py  capabilities.py  capability.py  compat.py  content.py  debug.py  error.py  glue.py  listener.py  listeners.py  manager.py  namespaces.py  operations.py  rpc.py  session.py  ssh.py  subject.py  sync_manager.py  util.py  xml_.py
src/: __init__.py  listener.py  operations.py  rpc.py  session.py  ssh.py
test/: asyncio_example.py  hello.py  reply1  test_xml_.py
(+130 files in other folders)
