[aliases]
test=pytest

[tool:pytest]
addopts = --verbose

[metadata]
description-file = README.md

[bdist_wheel]
universal=1


# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = ncclient/_version.py
tag_prefix = v

